--- a/SDL_HINT_RENDER_VSYNC.mediawiki
+++ b/SDL_HINT_RENDER_VSYNC.mediawiki
@@ -23,9 +23,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
-
-<!-- #If framebuffer acceleration is enabled this will affect the surface returned by [[SDL_SetVideoMode]](). -->
+[[SDL_HINT_RENDER_VSYNC]] overrides the SDL_RENDERER_PRESENTVSYNC flag in [[SDL_CreateRenderer]]().
 
 ----
 [[CategoryDefine]], [[CategoryHints]]
