blank out descriptions, grey out last value, add remarks from header

--- a/SDL_LogPriority.mediawiki
+++ b/SDL_LogPriority.mediawiki
@@ -10,25 +10,25 @@ An enumeration of the predefined log priorities.
 <!-- #The following content is included on <code>SDL_LogSetAllPriority, SDL_LogSetPriority, SDL_LogMessage, SDL_LogMessageV</code>.  Any changes between these comments will be reflected there as well.  Please use caution when editing.  Start Include here. -->
 {|
 |SDL_LOG_PRIORITY_VERBOSE
-|= 1
+|
 |-
 |SDL_LOG_PRIORITY_DEBUG
-|description
+|
 |-
 |SDL_LOG_PRIORITY_INFO
-|description
+|
 |-
 |SDL_LOG_PRIORITY_WARN
-|description
+|
 |-
 |SDL_LOG_PRIORITY_ERROR
-|description
+|
 |-
 |SDL_LOG_PRIORITY_CRITICAL
-|description
+|
 |-
-|SDL_NUM_LOG_PRIORITIES
-|description
+|<rowstyle="color: #808080;">SDL_NUM_LOG_PRIORITIES
+|(internal use)
 |}
 <!-- #End Include here. -->
 
@@ -38,11 +38,9 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
+By default logs are quiet, but if you're debugging SDL you might want:
+ ```SDL_LogSetAllPriority(SDL_LOG_PRIORITY_WARN);```
 
-<<Color2(green,There are comments about several of the values that could be included here.  Ex: WARN is useful for debugging, CRITICAL is default for most log categories, etc. Should they be included here?)>>
-
-<<Color2(green,Does this belong on this page as well?)>>
 By default the SDL_LOG_CATEGORY_APPLICATION category is enabled at the INFO level and all other [[SDL_LOG_CATEGORY]] categories are enabled at the CRITICAL level.
 
 
