--- a/CategoryLog.mediawiki
+++ b/CategoryLog.mediawiki
@@ -16,26 +16,25 @@ This category contains functions for handling simple log messages with categorie
 
 By default logs are quiet, but if you're debugging SDL you might want:
 
- <code>SDL_LogSetAllPriority(SDL_LOG_PRIORITY_WARN);</code>
+ ```SDL_LogSetAllPriority(SDL_LOG_PRIORITY_WARN);```
 
 Here's where the messages go on different platforms:
-:Windows: debug output stream
-:Android: log output
-:Others: standard error output (stderr)
- <<Color2(green,Table instead?)>>
+ ||Windows||debug output stream||
+ ||Android||log output||
+ ||Others||standard error output (stderr)||
 
 Messages longer than the maximum size (4096 bytes) will be truncated.
 
 
 == Enumerations ==
-<<FullSearch(category:CategoryEnum CategoryLog -SGEnumerations)>>
+<<FullSearchCached(category:CategoryEnum CategoryLog -SGEnumerations)>>
 
 <!-- #Remove this line and the ## below to use this markup if it becomes relevant to this category -->
 <!-- #== Structures == -->
-<!-- #<<FullSearch(category:CategoryStruct CategoryLog -SGStructures)>> -->
+<!-- #<<FullSearchCached(category:CategoryStruct CategoryLog -SGStructures)>> -->
 
 == Functions ==
-<<FullSearch(category:CategoryLog -CategoryEnum -CategoryStruct -SGFunctions)>>
+<<FullSearchCached(category:CategoryLog -CategoryEnum -CategoryStruct -SGFunctions)>>
 
 ----
 CategoryCategory
