--- a/Support.mediawiki
+++ b/Support.mediawiki
@@ -12,11 +12,13 @@
 
 Although there is some overlap between SDL version 1.2 and 1.3, the information in this wiki is specifically for SDL version 1.3.  For SDL 1.2 see http://www.libsdl.org/index.php and http://www.libsdl.org/cgi/docwiki.cgi.
 ```
-<br/>
-There are a number of sources for basic information about version 1.3 of the Simple DirectMedia Layer (SDL) API.  Here are a few:
+
+For help switching over from version 1.2 to 1.3 check out this [[MigrationGuide|Migration Guide]].
+
+Once you're using version 1.3 of the Simple DirectMedia Layer (SDL) API, there are a number of sources for basic information.  Here are a few:
 
 === Documentation ===
-Congratulations!  You already found this one.  Use the left sidebar to navigate through the SDL 1.3 documentation provided in this wiki.  Use the Feedback pull-down form in the upper left if you have suggestions for or questions about this wiki.
+Congratulations!  You already found this one.  Use the left sidebar to navigate through the SDL 1.3 documentation provided in this wiki.
 
 === Header Files ===
 The SDL 1.3 header files can be found here:
