--- a/CategoryAssertions.mediawiki
+++ b/CategoryAssertions.mediawiki
@@ -46,13 +46,13 @@ The following table describes each SDL_ASSERT_LEVEL setting and the correspondin
 
 
 == Enumerations ==
-<<FullSearch(category:CategoryEnum CategoryAssertions -SGEnumerations)>>
+<<FullSearchCached(category:CategoryEnum CategoryAssertions -SGEnumerations)>>
 
 == Structures ==
-<<FullSearch(category:CategoryStruct CategoryAssertions -SGStructures)>>
+<<FullSearchCached(category:CategoryStruct CategoryAssertions -SGStructures)>>
 
 == Functions ==
-<<FullSearch(category:CategoryAssertions -CategoryEnum -CategoryStruct -SGFunctions)>>
+<<FullSearchCached(category:CategoryAssertions -CategoryEnum -CategoryStruct -SGFunctions)>>
 
 
 ----
