--- a/CategoryVideo.mediawiki
+++ b/CategoryVideo.mediawiki
@@ -13,13 +13,13 @@
 This category contains functions for handling display and window actions.
 
 == Enumerations ==
-<<FullSearch(category:CategoryEnum CategoryVideo -SGEnumerations)>>
+<<FullSearchCached(category:CategoryEnum CategoryVideo -SGEnumerations)>>
 
 == Structures ==
-<<FullSearch(category:CategoryStruct CategoryVideo -SGStructures)>>
+<<FullSearchCached(category:CategoryStruct CategoryVideo -SGStructures)>>
 
 == Functions ==
-<<FullSearch(category:CategoryVideo -CategoryEnum -CategoryStruct -SGFunctions)>>
+<<FullSearchCached(category:CategoryVideo -CategoryEnum -CategoryStruct -SGFunctions)>>
 
 ----
 CategoryCategory
