--- a/CategoryRender.mediawiki
+++ b/CategoryRender.mediawiki
@@ -27,13 +27,13 @@ This API is designed to accelerate simple 2D operations. You may want more funct
 
 
 == Enumerations ==
-<<FullSearch(category:CategoryEnum CategoryRender -SGEnumerations)>>
+<<FullSearchCached(category:CategoryEnum CategoryRender -SGEnumerations)>>
 
 == Structures ==
-<<FullSearch(category:CategoryStruct CategoryRender -SGStructures)>>
+<<FullSearchCached(category:CategoryStruct CategoryRender -SGStructures)>>
 
 == Functions ==
-<<FullSearch(category:CategoryRender -CategoryEnum -CategoryStruct -SGFunctions)>>
+<<FullSearchCached(category:CategoryRender -CategoryEnum -CategoryStruct -SGFunctions)>>
 
 
 ----
